# MKE

./: .gitignore  CMakeLists.txt  README.md
MKE/: CMakeLists.txt
MKE/Base/: CMakeLists.txt
MKE/Base/JsonBridge/: CMakeLists.txt
MKE/Base/JsonBridge/MKE/: JsonBridge.hpp
MKE/Base/MKE/: Event.hpp  Exceptions.hpp  Input.hpp  Ints.hpp  JsonBridge.cpp  NonCopyable.hpp  Panic.hpp  ResPath.cpp  ResPath.hpp  ResourceManager.hpp  StrUtils.hpp  Transformable.cpp  Transformable.hpp  Updatable.hpp
MKE/Base/MKE/Math/: Base.hpp  Geometry.cpp  Geometry.hpp  Math.hpp  Matrix.hpp  MatrixUtils.hpp  Rect.hpp  Vector.cpp  Vector.hpp  Vector2.hpp
MKE/Base/Math/: CMakeLists.txt
MKE/Base/Math/MKE/Math/: Math.hpp
MKE/Base/Random/: CMakeLists.txt
MKE/Base/ResPath/: CMakeLists.txt
MKE/Base/ResourceManager/: CMakeLists.txt
MKE/Base/Updatable/: CMakeLists.txt
MKE/Base/WorldEntity/: BoxyWorldEntity.cpp
MKE/Common/: CMakeLists.txt
MKE/Common/CollisionComponent/: CollisionComponent.hpp
MKE/Common/CollisionShape/: CollisionShape.cpp
MKE/Common/GUI/: Button.hpp  Label.cpp  Label.hpp
MKE/Common/Game/: Game.cpp  Game.hpp
MKE/Common/MKE/: Camera.cpp  Camera.hpp  Clock.cpp  Clock.hpp  Font.cpp  Font.hpp  Game.cpp  Game.hpp  GameInput.cpp  GameInput.hpp  ResourceManager.cpp  ResourceManager.hpp  VertexArray.cpp  VertexArray.hpp  WorldEntity.cpp  WorldEntity.hpp
MKE/Common/MKE/Collisions/CollisionComponent/: CollisionComponent.cpp  CollisionComponent.hpp
MKE/Common/MKE/Collisions/CollisionShape/: CollisionShape.cpp  CollisionShape.hpp
MKE/Common/MKE/Nodes/2d/: Node2d.hpp  RayShape.cpp  RayShape.hpp  RectShape.cpp  RectShape.hpp
MKE/Common/MKE/Nodes/3d/: CubeShape.cpp  CubeShape.hpp
MKE/Common/MKE/Nodes/GUI/: Alignments.hpp  Button.cpp  Button.hpp  Clickable.cpp  Clickable.hpp  ColorRect.cpp  ColorRect.hpp  GUI.hpp  Label.cpp  Label.hpp  TextureRect.cpp  TextureRect.hpp
MKE/Common/MKE/Primitives/2d/: RectPrimitive.cpp  RectPrimitive.hpp  Text.cpp  Text.hpp
MKE/Common/MKE/Primitives/3d/: CubePrimitive.cpp  CubePrimitive.hpp
MKE/Common/MKE/Shaders/: SimpleShader.cpp  SimpleShader.hpp
MKE/Common/WorldEntity/: CMakeLists.txt
MKE/Common/WorldEntity/MKE/: WorldEntity.hpp
MKE/Game/: Game.hpp
MKE/Graphics/: CMakeLists.txt
MKE/Graphics/MKE/: Color.hpp  DrawContext.cpp  DrawContext.hpp  Drawable.cpp  Drawable.hpp  Image.cpp  Image.hpp  Init.cpp  Init.hpp  RenderTarget.cpp  RenderTarget.hpp  RenderTexture.cpp  RenderTexture.hpp  RenderWindow.cpp  RenderWindow.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Vertex.cpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  View.cpp  View.hpp  Window.cpp  Window.hpp
MKE/Graphics/MKE/Primitives/2d/: RectPrimitive.cpp  RectPrimitive.hpp
MKE/Graphics/SpriteBatch/: CMakeLists.txt
MKE/Graphics/Window/: CMakeLists.txt  Window.hpp
dependencies/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
examples/: CMakeLists.txt  cube_primitive.cpp  fun.cpp  hello_rectangle.cpp  hello_triangle.cpp  hello_window.cpp  hello_window_primitive.cpp  rect_primitive.cpp  text_rendering.cpp  vertex_array.cpp
examples/hello_triangle/: CMakeLists.txt  hello_triangle.cpp
examples/hello_window/: CMakeLists.txt  hello_window.cpp
examples/hello_window_primitive/: CMakeLists.txt  hello_window_primitive.cpp
examples/jumping_game/: CMakeLists.txt  jumping_game.cpp
examples/jumping_game/assets/: settings.json
examples/light_casters/: CMakeLists.txt  light_casters.cpp
examples/light_casters/assets/: light_vert.glsl  vert.glsl
examples/lighting/: CMakeLists.txt  lighting.cpp
examples/lighting/assets/: frag.glsl  light_frag.glsl  settings.json  vert.glsl
examples/lighting_maps/: CMakeLists.txt  lighting_maps.cpp
examples/lighting_maps/assets/: frag.glsl
examples/matcraft/: CMakeLists.txt  matcraft.cpp
examples/matcraft/assets/: voxel.frag  voxel.vert
examples/matcraft/matcraftlib/: CMakeLists.txt  Chunk.hpp  DeathScreen.cpp  DeathScreen.hpp  Inventory.hpp  Menu.cpp  Menu.hpp  Player.cpp  VoxelTextureFaces.cpp  World.cpp  World.hpp  chunk_utils.hpp  ray_cast_voxel.hpp
examples/simple_game/: CMakeLists.txt  simple_game.cpp
examples/simple_game/assets/: settings.json  shader.fs  shader.vs
examples/simple_shader/: CMakeLists.txt  simple_shader.cpp
examples/simple_shader/assets/: shader.fs  shader.vs
examples/simple_texture/: CMakeLists.txt  simple_texture.cpp
examples/simple_texture/assets/: shader.fs  shader.vs
examples/test_lopen/: CMakeLists.txt  test_lopen.cpp
examples/text_rendering/: CMakeLists.txt  text_rendering.cpp
examples/text_rendering/assets/: frag.fs  vert.vs
examples/vertex_array/: CMakeLists.txt  vertex_array.cpp
examples/voxels/: CMakeLists.txt  voxels.cpp
examples/voxels/assets/: settings.json  voxel.frag  voxel.vert
examples/voxels/voxelslib/: CMakeLists.txt  Chunk.cpp  Chunk.hpp  DeathScreen.cpp  Inventory.cpp  Inventory.hpp  Menu.cpp  Menu.hpp  Player.cpp  Player.hpp  PlayerUI.cpp  PlayerUI.hpp  VoxelTextureFaces.cpp  VoxelTextureFaces.hpp  VoxelVertex.cpp  VoxelVertex.hpp  World.cpp  World.hpp  chunk_utils.cpp  chunk_utils.hpp  ray_cast_voxel.hpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
